# PH_TESS_I_LightCurveViewer

./: .flake8  .gitignore  EB_Vetting_Template.ipynb  LC_Frequency_Analysis.ipynb  LICENSE  MCMC_Eclipses_Fitting.ipynb  MCMC_Understanding_Usage.ipynb  Model_Transit_Visualization.ipynb  PH_TESS_I_LightCurveViewer.ipynb  Process TESS TCE _dvt Fits data.ipynb  Process TESS TCE _lc Fits data.ipynb  Process TESS TCE _tp Fits data.ipynb  README.md  Subj36977445_TIC232612416_lc.ipynb  Subj36978027_TIC284990199_lc.ipynb  Subj_Kelt_18b_TIC293687315_lc.ipynb  Subj_LHS_3844_b_TIC410153553_lc.ipynb  TCE_Finder.ipynb  TIC_Centroid_Viewer.ipynb  TIC_Lightcurve_Viewer.ipynb  TIC_Period_Finding_w_TLS.ipynb  TIC_Pyaneti.ipynb  TIC_TPF_Viewer.ipynb  TIC_Vetting.ipynb  TIC_Vetting_Walkthrough.md  TOIs_eRV_RUWE_distribution.ipynb  TicResearchHelper.ipynb  astro_tools.ipynb  asyncio_compat.py  bibs_utils.py  download_utils.py  environment.yml  lc_processing_trial.ipynb  lightkurve_ext.py  lightkurve_ext_batman.py  lightkurve_ext_eleanor.py  lightkurve_ext_multi_sources.py  lightkurve_ext_pg.py  lightkurve_ext_pg_runner.py  lightkurve_ext_pyaneti.py  (+11 more)
data/: README.md  delete_old_fits.sh
eb_with_diff_sb_period/: Dashboard_EB_with_SB.ipynb  EB_SB_ETV_233738458.ipynb  EB_SB_ETV_272650576.ipynb  Query_Gaia_SB.ipynb  Results.md  match_tbosb1.csv  match_tbosb2.csv  match_tbosb2c.csv  multi_star_candidates_by_eb_sb_period_diff.csv  pht_vsx_eb.csv  pht_vsx_eb_with_sb.csv
nss_indicators/: GaiaDR3NSSIndicators.ipynb
pyaneti_templates/: input_1planet.py  input_1planet_circular_orbit.py  (+5 more)
(+105 files in other folders)
